@@ -1,3 +1,7 @@
+2015-07-12  Kubo Takehiro  <kubo@jiubao.org>
+	* ext/oci8/oci8.rb: Check DYLD_FALLBACK_LIBRARY_PATH also on
+	    installation. (OS X only)
+
 2015-07-11  Kubo Takehiro  <kubo@jiubao.org>
 	* ext/oci8/error.c, ext/oci8/extconf.rb, ext/oci8/oci8.h,
 	  ext/oci8/oci8lib.c, ext/oci8/util.c, ext/oci8/win32.c,
